[project]
name = "ldap-ui"
authors = [{ name = "dnknth" }]
description = "A fast and versatile LDAP editor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ldap", "web-ui", "python3"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.12",
    "python-ldap",
    "python-multipart",
    "uvicorn>=0.34.3",
]
dynamic = ["version"]

[dependency-groups]
dev = ["httpx>=0.28.1"]

[project.scripts]
ldap-ui = "ldap_ui.__main__:main"

[project.urls]
Repository = "https://github.com/dnknth/ldap-ui"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.dynamic]
version = { attr = "ldap_ui.__version__" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
ldap_ui = ["statics/*", "statics/assets/*"]

[tool.uv]
package = true
